<resources>
    <string name="app_name">Medicare</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="give_correct_information">Please your give correct information because your email &amp; phone number needs to be verified.</string>

    <!-- My Common Strings -->
    <string name="student_name">Abhishek S Lal</string>
    <string name="copyright">Abhishek S Lal © 2020</string>
    <string name="profile_settings">My Profile</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="about_app">About App</string>
    <string name="all_peoples">Peoples</string>
    <string name="friend_requests">Friend Requests</string>


    <!-- Slider Screen Strings -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">START</string>
    <string name="title_slide1">Friendship</string>
    <string name="desc_slide1">You can find a large number of people to build up friendship</string>
    <string name="title_slide2">No Cost</string>
    <string name="desc_slide2">RubixChat is completely FREE of cost, no subscription fees.</string>
    <string name="title_slide3">Chatting</string>
    <string name="desc_slide3">One to one and Many to many chatting system</string>
    <string name="title_slide4">Secure</string>
    <string name="desc_slide4">RubixChat keeps your messages secure</string>


    <!-- About App Strings -->
    <string name="about_text">This application is built for learning purpose.\nProject Source Code Link-</string>
    <string name="project_git_link"><u>https://github.com/</u></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Remove or change this placeholder text -->
    <string name="on_internet_msg">No internet connection! Please check internet.</string>
    <string name="menu_search">Search</string>
    <string name="menu_requests">Friend Requests</string>
    <string name="register_success_popup">Registered successfully.\nVerification email has been sent.\nPlease verify email.</string>
    <string name="recheck_gender">To save your changes, please check/recheck your GENDER.</string>
    <string name="what_offers">
        • User registration with e-mail and password.\n\n
        • Email Verification with VERIFIED Profile TAG \n\n
        • Supports text and image messages in personal as well as in group chats. \n\n
        • Image cropping and Image Size Compressing facility in all image uploads for greater performance. \n\n
        • Global Searching Mechanism to find any registered users. \n\n
        • Send Friend Request to a person, Cancel, Un-friend and Decline request mechanism. \n\n
        • No spam messages since only your friends can send you messages. \n\n
        • Displaying Last Seen Time / Online Active Status of Users on Chat. \n\n
        • Offline loading capability (as like Messenger, WhatsApp and others). \n\n
        • Network Connectivity checker. \n\n
        • New message and new friend request NOTIFICATION (Coming soon).
    </string>
    <string name="why_app">This app module can be easily integrated to any Android applications to facilitate one-to-one and one-to-many messaging services, thereby allowing developers to concentrate on the main functionality of their app. Contact developer to get the full code.</string>
    <string name="what_is_rubixchat">RubixChat is a simple, lightweight messaging application build with clean code and fully customizable layouts for easy integration to other natively build Android applications.</string>

    <string-array name="spinerViewPeople">
        <item>Default</item>
        <item>Name</item>
        <item>Date</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>