<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/menu_search"
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"/>

    <item
        android:title="@string/friend_requests"
        android:id="@+id/friend_requests"
        android:icon="@drawable/ic_baseline_contacts_24"
        app:showAsAction="always"/>

    <item
        android:title="@string/profile_settings"
        android:id="@+id/profile_settings"
        app:showAsAction="never"/>

    <item
        android:title="@string/friends"
        android:id="@+id/friends"
        app:showAsAction="never"/>

<!--    <item-->
<!--        android:title="@string/about_app"-->
<!--        android:id="@+id/about_app"-->
<!--        app:showAsAction="never"-->
<!--        />-->
    <item
        android:title="@string/log_out"
        android:id="@+id/main_logout"
        app:showAsAction="never"
        />
</menu>